--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "chess929server",
   "version": "1.0.0",
   "description": "server",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "node app.js",
+    "start" : "node app.js"
   },
   "repository": {
     "type": "git",
